--- a/subwindow.ui
+++ b/subwindow.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -237,12 +240,12 @@
      </property>
     </item>
    </widget>
-   <widget class="QPushButton" name="chargingButton_2">
+   <widget class="QPushButton" name="confirmButton">
     <property name="geometry">
      <rect>
       <x>200</x>
       <y>170</y>
-      <width>121</width>
+      <width>111</width>
       <height>41</height>
      </rect>
     </property>
@@ -257,6 +260,26 @@
      <string>确认提交</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="backButton">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>170</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>返回</string>
+    </property>
+   </widget>
    <zorder>showinfo</zorder>
    <zorder>chargereqButton</zorder>
    <zorder>detailbillButton</zorder>
@@ -268,7 +291,8 @@
    <zorder>chargeamounttext</zorder>
    <zorder>modeselectiontext</zorder>
    <zorder>modeselectioncombo</zorder>
-   <zorder>chargingButton_2</zorder>
+   <zorder>confirmButton</zorder>
+   <zorder>backButton</zorder>
   </widget>
  </widget>
  <resources/>
