--- a/sub_admin.ui
+++ b/sub_admin.ui
@@ -9,19 +9,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>416</width>
-    <height>384</height>
+    <width>404</width>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MCSRrank</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="chargereqButton">
+   <widget class="QPushButton" name="stoppileButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>20</y>
+      <x>250</x>
+      <y>50</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -34,15 +34,15 @@
      </font>
     </property>
     <property name="text">
-     <string>充电请求</string>
+     <string>停止该桩</string>
     </property>
    </widget>
    <widget class="QLabel" name="showinfo">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>20</x>
       <y>230</y>
-      <width>181</width>
+      <width>311</width>
       <height>121</height>
      </rect>
     </property>
@@ -57,13 +57,13 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="detailbillButton">
+   <widget class="QPushButton" name="pileamountButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>80</y>
-      <width>121</width>
-      <height>41</height>
+      <x>20</x>
+      <y>20</y>
+      <width>141</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -74,16 +74,16 @@
      </font>
     </property>
     <property name="text">
-     <string>详单查询</string>
+     <string>桩的数量</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="chargingButton">
+   <widget class="QPushButton" name="showpileButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>140</y>
-      <width>121</width>
-      <height>41</height>
+      <x>20</x>
+      <y>90</y>
+      <width>141</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -94,108 +94,75 @@
      </font>
     </property>
     <property name="text">
-     <string>未完订单</string>
+     <string>某桩状态</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="chargemodeButton">
+   <widget class="QPushButton" name="servingcarButton">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>200</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>充电模式</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="chargechangeButton">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>260</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>改变充量</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="stopchargingButton">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>320</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>停止充电</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="chargeamountline">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
+      <x>250</x>
       <y>110</y>
-      <width>151</width>
+      <width>121</width>
       <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="chargeamounttext">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>80</y>
-      <width>91</width>
-      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
-     <string>充电电量</string>
+     <string>服务信息</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pilebillButton">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>170</y>
+      <width>121</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>报表信息</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="waitinglistButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>160</y>
+      <width>141</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>等候情况</string>
     </property>
    </widget>
    <widget class="QLabel" name="modeselectiontext">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>180</x>
       <y>20</y>
-      <width>121</width>
+      <width>81</width>
       <height>21</height>
      </rect>
     </property>
@@ -207,14 +174,14 @@
      </font>
     </property>
     <property name="text">
-     <string>充电模式</string>
+     <string>哪个桩</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="modeselectioncombo">
+   <widget class="QComboBox" name="pileselectioncombo">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>40</y>
+      <x>270</x>
+      <y>10</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -231,68 +198,39 @@
     </property>
     <item>
      <property name="text">
-      <string>快速</string>
+      <string>1</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>慢速</string>
+      <string>2</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>3</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>4</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>5</string>
      </property>
     </item>
    </widget>
-   <widget class="QPushButton" name="confirmButton">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>170</y>
-      <width>111</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>确认提交</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="backButton">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>170</y>
-      <width>61</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>返回</string>
-    </property>
-   </widget>
    <zorder>showinfo</zorder>
-   <zorder>chargereqButton</zorder>
-   <zorder>detailbillButton</zorder>
-   <zorder>chargingButton</zorder>
-   <zorder>chargemodeButton</zorder>
-   <zorder>chargechangeButton</zorder>
-   <zorder>stopchargingButton</zorder>
-   <zorder>chargeamountline</zorder>
-   <zorder>chargeamounttext</zorder>
+   <zorder>stoppileButton</zorder>
+   <zorder>pileamountButton</zorder>
+   <zorder>showpileButton</zorder>
+   <zorder>servingcarButton</zorder>
+   <zorder>pilebillButton</zorder>
+   <zorder>waitinglistButton</zorder>
    <zorder>modeselectiontext</zorder>
-   <zorder>modeselectioncombo</zorder>
-   <zorder>confirmButton</zorder>
-   <zorder>backButton</zorder>
+   <zorder>pileselectioncombo</zorder>
   </widget>
  </widget>
  <resources/>
